# rmf_camera

./: CMakeLists.txt  README.md  package.xml  plugins.xml
env-hooks/: rmf_camera.dsv.in
include/: HumanDetector.hpp  YoloDetector.hpp
include/rmf_camera/: BoundingBox3D.hpp  HumanDetector.hpp  YoloDetector.hpp
launch/: test_launch.py
models/CameraRos/: model.sdf
models/camera/: model.sdf
src/: HumanDetector.cpp  YoloDetector.cpp  image_proc.cpp  image_proc2.cpp  obst_detector.cpp
worlds/: test.world  test_world.sdf
